# she-codes-crowdfunding-api-project-kalicialopez

./: .dockerignore  .editorconfig  .gitignore  README.md  Random.txt  fly.toml  notes.txt  pyproject.toml
crowdfunding/crowdfunding/: settings.py  urls.py
crowdfunding/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
crowdfunding/projects/migrations/: 0001_initial.py  0002_pledge.py  0003_rename_supporters_pledge_supporter.py  0004_alter_pledge_supporter_alter_project_owner.py  0005_project_liked_by.py  0006_project_total_alter_pledge_amount_alter_project_goal_and_more.py  0007_alter_project_title.py  0008_rename_amount_pledge_pledge_amount.py  0009_alter_pledge_anonymous.py  0010_alter_pledge_anonymous.py  0011_remove_project_total.py  0012_project_total.py  0013_alter_project_liked_by_alter_project_owner.py  0014_alter_project_liked_by_alter_project_owner.py  0015_remove_project_total.py
crowdfunding/users/: models.py  permissions.py  serializers.py  urls.py  views.py
crowdfunding/users/migrations/: 0001_initial.py  0002_customuser_bio_customuser_country_of_residence_and_more.py  0003_customuser_highest_level_of_education.py  0004_alter_customuser_country_of_residence_and_more.py  0004_remove_customuser_email_customuser_repeat_password_and_more.py  0005_remove_customuser_repeat_password_customuser_email_and_more.py  0006_customuser_repeat_password.py  0007_remove_customuser_repeat_password.py  0008_alter_customuser_country_of_residence_and_more.py
